--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.yarn/releases
 !.yarn/versions
 
+# IDEA
+/.idea
 # testing
 /coverage
 
@@ -39,3 +41,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
