--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tiny-pinyin": "^1.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
